moving to better namespace

--- a/src/WebAppIdentityMvc/Views/Shared/_LoginPartial.cshtml
+++ b/src/WebAppIdentityMvc/Views/Shared/_LoginPartial.cshtml
@@ -1,11 +1,16 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<ApplicationUser> SignInManager
-
+@using System.Security.Claims
+@{
+    string GetClaimsName(ClaimsPrincipal principal)
+    {
+        return principal.Claims.FirstOrDefault(x => x.Type == ClaimTypes.GivenName)?.Value;
+    }
+}
 <ul class="navbar-nav">
-    @if (SignInManager.IsSignedIn(User))
+    @if (User.Identity.IsAuthenticated)
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @GetClaimsName(User)!</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
